# BUAA_WordList

./: .gitignore  CMakeLists.txt  README.md
src/: HelloWorld.cpp  main.cpp
src/core/: API.cpp  Config.cpp  Controller.cpp  Graph.cpp  Utils.cpp  Word.cpp
src/error/: Error.cpp
src/include/: API.h  Config.h  Const.h  Controller.h  Error.h  ErrorCode.h  Graph.h  Result.h  Utils.h  Word.h
src/postprocess/: Output.cpp  Output.h
src/preprocess/: Input.cpp  Input.h
tests/coretest/: coretest.cpp
